Revision history for Verilator

The contributors that suggested a given feature are shown in []. Thanks!

* Verilator 3.925 devel


* Verilator 3.924 2018-06-12

***   Renamed --profile-cfuncs to --prof-cfuncs.

****  Report interface ports connected to wrong interface, bug1294. [Todd Strader]

****  When tracing, use scalars on single bit arrays to appease vcddiff.

****  Fix parsing "output signed" in V2K port list, msg2540. [James Jung]

****  Fix parsing error on bad missing #, bug1308. [Dan Kirkham]

****  Fix $clog2 to be in verilog 2005, bug1319. [James Hutchinson]


* Verilator 3.922 2018-03-17

**    Support IEEE 1800-2017 as default language.

***   Support trig functions ($sin() etc), bug1281. [Patrick Stewart]

***   Support calling system functions as tasks, bug1285. [Joel Holdsworth]

***   Support assert properties, bug785, bug1290. [John Coiner, et al]

***   Support $writememh. [John Coiner]

***   Add --no-debug-leak to reduce memory use under debug. [John Coiner]

****  Fix severe runtime performance bug in certain foreach loops. [John Coiner]

****  On convergence errors, show activity. [John Coiner]

****  Fix GCC 8.0 issues, bug1273.

****  Fix pullup/pulldowns on bit selects, bug1274. [Rob Stoddard]

****  Fix verilator_coverage --annotate-min, bug1284. [Tymoteusz Blazejczyk]

****  Fix quoting of quoted arguments. [John Coiner]


* Verilator 3.920 2018-02-01

**    Moving forward, use the git "stable" branch to track the latest release,
      and git "v#.###" tags for specific releases.

***   Support 'assume' similar to 'assert', bug1269. [Dan Gisselquist]

****  Fix tracing example file output, bug1268. [Enzo Chi]

****  Fix gate optimization out of memory, add --gate-stmts, bug1260. [Alex Solomatnikov]

****  Fix compile error on public real parameters by suppressing, bug1261. [Alex Solomatnikov]

****  Fix input-only tristate comparisons, bug1267. [Alexis G]

****  Fix missing edge type in xml output, msg2480. [Alexis G]
